# program-synthesis

./: .gitignore  README.md  pyproject.toml
blinkfill/: __init__.py  api.py  common.py  dag.py  dsl.py  input_data_graph.py  main.py  synthesis.py
src/blinkfill/: __init__.py  api.py  common.py  dag.py  dsl.py  input_data_graph.py  main.py  synthesis.py
src/synthesis/blinkfill/: __init__.py  dag.py  input_data_graph.py
synthesis/blinkfill/: __init__.py  api.py  common.py  dag.py  dsl.py  input_data_graph.py  main.py  visualize.py
synthesis/examples/: main.py  nand.py
synthesis/experiments/: synthesis.py
synthesis/nand/: dsl.py  spec.py
tests/: test_blinkfill.py
