[project]
name = "program-synthesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Saul Field", email = "saul.field@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["pydantic>=2.10.6"]

[project.scripts]
blinkfill = "blinkfill.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
